--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
   
   <nav class="nav">
     <div class="nav-inner">
-      <a class="brand" href="{{ url_for('home') }}">Rashed's Tasks</a>
+      <a class="brand" href="{{ url_for('homepage') }}">Rashed's Tasks</a>
       <a href="{{ url_for('login') }}" class="btn ghost" style="padding: 8px 12px; font-size: 13px;">Sign Out</a>
     </div>
   </nav>
