--- a/templates/about.html
+++ b/templates/about.html
@@ -24,7 +24,7 @@
   </div>
 
   <div style="margin-top: 30px;">
-    <a class="btn primary" href="{{ url_for('home') }}">Back to Dashboard</a>
+    <a class="btn primary" href="{{ url_for('homepage') }}">Back to Dashboard</a>
   </div>
 </section>
 {% endblock %}
