--- a/templates/landing.html
+++ b/templates/landing.html
@@ -18,7 +18,7 @@
     <a class="btn primary" href="{{ url_for('login') }}">
       Get Started
     </a>
-    <a class="btn ghost" href="{{ url_for('home') }}">
+    <a class="btn ghost" href="{{ url_for('homepage') }}">
       View Dashboard
     </a>
   </div>
